discussion/kv_engine/177008/177008_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create standalone unit test for GetRandomKey

There is something "strange" with the implementation of GetRandomKey
on the server as it seems to be a delay until the key gets available
after being stored on the server.

After storing a document you may immediately fetch it through a
call with get, but that doesn't seem to be the case with GetRandomKey
as I had to add a few retries until it got available.

Change-Id: Iaa0a2f76822bf4701c79ac65eaab6ca9fb0833a4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 10:42:42.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47301/ : FAILURE

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.336301\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (44 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47301/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18541/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
            conn = cluster->getConnection(0);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:47:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:96:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:633:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:855:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18541/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18541/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28806/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:17:48.875Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T09:17:48.875Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:17:48.875Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (5 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28806/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20425/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:05:18.315Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T09:05:18.315Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:05:18.315Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (1 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20425/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19647/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T10:15:00.538Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T10:15:00.538Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T10:15:00.538Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (3 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19647/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8212/ : FAILURE

Compile error at [2022-07-03T08:14:03.686Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8311/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T08:46:03.271Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T08:46:03.271Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T08:46:03.271Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (0 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8311/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20773/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:27:08.992Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T09:27:08.992Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:27:08.992Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (1 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20773/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21413/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:19:52.903Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T09:19:52.903Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:19:52.903Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (15 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21413/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17692/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39753/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
